添加百度统计

--- a/games/snake/snake.html
+++ b/games/snake/snake.html
@@ -4,6 +4,15 @@
   <meta charset="UTF-8">
   <meta name="keyword" content="suiga, 西瓜, snake, 贪吃蛇">
   <meta name="description" content="贪吃蛇游戏">
+  <script>
+    var _hmt = _hmt || [];
+    (function() {
+      var hm = document.createElement("script");
+      hm.src = "https://hm.baidu.com/hm.js?65cf33491657c28806b6f5f1aed79ac7";
+      var s = document.getElementsByTagName("script")[0]; 
+      s.parentNode.insertBefore(hm, s);
+    })();
+  </script>
   <title>贪吃蛇</title>
   <style>
     body {
