--- a/icss/selector.html
+++ b/icss/selector.html
@@ -6,6 +6,15 @@
   <meta name="author" content="moe suiga">
   <meta name="keywords" content="web, 前端, CSS, CSS选择器">
   <meta name="description" content="CSS选择器演示页面">
+  <script>
+    var _hmt = _hmt || [];
+    (function() {
+      var hm = document.createElement("script");
+      hm.src = "https://hm.baidu.com/hm.js?65cf33491657c28806b6f5f1aed79ac7";
+      var s = document.getElementsByTagName("script")[0]; 
+      s.parentNode.insertBefore(hm, s);
+    })();
+  </script>
   <title>CSS选择器</title>
   <style>
     .wrapper {
